# lamini-contract-poc

./: Contracts Data Discovery.ipynb  Memory Tuning Experiments.ipynb  README.md  lyft_generated_qa.jsonl  pyproject.toml  uber_generated_qa.jsonl  v3_lyft_generated_qa.jsonl  v3_uber_generated_qa.jsonl
.ipynb_checkpoints/: Contracts Data Discovery-checkpoint.ipynb  Memory Tuning Experiments-checkpoint.ipynb
contract_poc/: answer_pipeline.py  gen_pipeline.py  qa_pipeline.py  rag_pipeline.py
contract_poc/.ipynb_checkpoints/: qa_pipeline-checkpoint.py  summary_pipeline-checkpoint.py  utils-checkpoint.py
eval_sets/: gold-test-set.jsonlines
eval_sets/.ipynb_checkpoints/: Apple PoC - Uber_Lyft Eval Set-checkpoint.csv
model_index/: index.faiss  splits.json
responses/: base_gemma_2_response.csv  base_llama_3_1_response.csv  base_llama_3_2_response.csv  base_mistral_7B_response.csv  gold_test_responses_13265.csv  gold_test_responses_13695.csv  gold_test_responses_13722.csv  gold_test_responses_13723.csv  gold_test_responses_13731.csv  gold_test_responses_13732.csv  gold_test_responses_13733.csv  gold_test_responses_13812.csv  gold_test_responses_13813.csv  gold_test_responses_13814.csv  gold_test_responses_v1.jsonl  overfit_response.jsonl  rag_gemma_2_response.csv  rag_llama_3_1_response.csv  rag_llama_3_2_response.csv  rag_mistral_7B_response.csv
responses/.ipynb_checkpoints/: base_llama_3_2_response-checkpoint.jsonl  direct_rag_response-checkpoint.jsonl  overfit_v2_response-checkpoint.jsonl  overfit_v3_response-checkpoint.jsonl  rag_llama_3_1_response-checkpoint.csv
