[tool.poetry]
name = "contract-poc"
version = "0.1.0"
description = ""
authors = ["Ryan Compton <ryan@powerml.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lamini = "^3.1.3"
jupyter = "^1.1.1"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
